deployment.yml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokemon-sql-deployment
spec:
  selector:
    matchLabels:
      app: pokemon-sql
  replicas: 1
  template:
    metadata:
      labels:
        app: pokemon
    spec:
      containers:
      - name: pokemon-sql
        image: oliverdj/pokemon-chart-sql:version1.0
        ports:
        - containerPort: 1433
      - name: pokemon-api
        image: oliverdj/pokemon-chart-api:version1.0
        ports:
        - containerPort: 80
apiVersion: apps/v1
kind: Service
