deployment2.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: oliver-playground
  labels:
    user: oliver.jensen
---
# // Deployment for SQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokemon-sql-deployment
  namespace: oliver-playground
spec:
  selector:
    matchLabels:
      app: pokemon-sql
  replicas: 1
  template:
    metadata:
      labels:
        app: pokemon-sql
    spec:
      containers:
        - name: pokemon-sql
          image: oliverdj/pokemon-chart-sql:version1.1
---
# // Deployment for Azure function
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokemon-chart-deployment
  namespace: oliver-playground
spec:
  selector:
    matchLabels:
      app: pokemon-api
  replicas: 1
  template:
    metadata:
      labels:
        app: pokemon-api
    spec:
      containers:
        - name: pokemon-api
          image: oliverdj/pokemon-chart-api:version1.1
---
# // Service For SQL
apiVersion: v1
kind: Service
metadata:
  name: pokemon-sql-service
  namespace: oliver-playground
  labels:
    app: pokemon-sql
spec:
  selector:
    app: pokemon-sql
  ports:
    - protocol: TCP
      port: 9433
      targetPort: 1433
---
# // Service For Azure Functions
apiVersion: v1
kind: Service
metadata:
  name: pokemon-chart-service
  namespace: oliver-playground
  labels:
    app: pokemon-api
spec:
  selector:
    app: pokemon-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
# // Ingress for public Ip address
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pokemon-ingress
  namespace: oliver-playground
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: pokemon.e74c370edf4345d39982.westeurope.aksapp.io
      http:
        paths:
          - backend:
              serviceName: pokemon-chart-service
              servicePort: 8080
            path: /
